2008-06-21  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Explain that S2S outgoing first tries IPV4 and if
	that fails then tries IPv6
	* doc/guide.html: Likewise

2008-06-18  Badlop  <badlop@process-one.net>

	* src/ejabberd.app: The ejabberd version number is defined in the
	OTP application resource file, in the key 'vsn' (EJAB-657)
	* src/ejabberd.hrl: The macro VERSION now consults the ejabberd
	application key vsn
	* src/configure.erl: Load the ejabberd application description
	* doc/Makefile: Read ejabberd version from ejabberd.app vsn
	* doc/api/Makefile: Likewise

2008-06-18  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: get_default bugfix (EJAB-656)

2008-06-13  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Allow admins to send messages to
	rooms even if not joined (EJAB-645)
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise

	* src/ejabberd.cfg.example: Add registration_timeout (EJAB-653)

	* doc/guide.tex: Table of listener modules converted to
	description. Table of modules overview simplified, and module
	names link to their sections. Document
	ldap_local_filter (EJAB-179). Title in HTML is shorter.
	Update several external URIs.

	* doc/guide.html: Regenerated with all the latest changes

2008-06-12  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Permanent reference URL for sections (EJAB-651).
	Changes in CSS: verbatim text is indented and has grey background;
	descriptions are indented; table borders are softer. Fix
	indentation of verbatim text.

2008-06-10  Badlop  <badlop@process-one.net>

	* src/ejabberd_c2s.erl: Bugfix: deliver messages when first
	presence is Invisible (thanks to Dariusz Markowicz)(EJAB-262)

2008-06-08  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Small fixes (thanks to Christoph Anton Mitterer)
	* doc/introduction.tex: Likewise
	* doc/guide.html: Likewise

2008-06-05  Badlop  <badlop@process-one.net>
