@@ -1,6 +1,9 @@
 2008-06-21  Badlop  <badlop@process-one.net>
 
-	* doc/guide.tex: Explain that S2S outgoing first tries IPV4 and if
+	* src/web/ejabberd_http.erl: Support PUT and DELETE methods in
+	ejabberd_http (thanks to Eric Cestari)(EJAB-662)
+
+	* doc/guide.tex: Explain that S2S outgoing first tries IPv4 and if
 	that fails then tries IPv6
 	* doc/guide.html: Likewise
 
